--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 :root {
     --mblue:#5e8be2;
 }
-* {
-    transition:all 0.3s;
-}
 body {
     text-align:center;
     background-color:#001a7c;
@@ -13,6 +10,8 @@ body {
     font-size:30px;
     overflow-x:hidden;
     scroll-behavior: smooth;
+    margin: 0;
+    min-height: 100vh;
 }
 body::after {
     content: "";
@@ -31,11 +30,12 @@ body::after {
     margin: 2em 0;
 }
 
-#countdown {
+#countdown, #countdownmore {
     color:var(--mblue);
     font-size:2em;
     flex: 2;
 }
+
 
 #content {
     flex: 4;
@@ -44,6 +44,9 @@ body::after {
     flex: 1;
     color:white;
     cursor:pointer;
+    transition:all 0.3s;
+    font-size:1.4em;
+    margin-bottom:1em;
 }
 #scrolldown:hover {
     color:var(--mblue);
@@ -52,11 +55,70 @@ body::after {
     width: 100vw;
     height:100vh;
 }
+.halfscreen {
+    max-width:50%;
+    margin:auto;
+}
 .flex {
     display:flex;
     flex-direction:column;
     align-items:center;
     justify-content:center;
+}
+.flexrow {
+    padding:1em;
+    display:flex;
+    flex-direction:row;
+    align-items:stretch;
+    justify-content:stretch;
+}
+
+.dividercolumn {
+    width:1px;
+    background-color:var(--mblue);
+}
+.dividerrow {
+    height:1px;
+    background-color:var(--mblue);
+}
+
+.contact {
+    font-size:0.8em;
+    align-items:stretch;
+    height:100%;
+    justify-content: space-evenly;
+}
+.contact.right {
+    text-align:left;
+}
+.contact.right > * {
+    margin-left:1em;
+}
+.contact.left {
+    text-align:right;
+}
+.contact.left > * {
+    margin-right:1em;
+}
+
+.contact.right .phonenumber .fas, .contact.right .email .fas {
+    margin-right:2em;
+}
+.contact.left .phonenumber .fas, .contact.left .email .fas {
+    margin-left:2em;
+}
+
+.phonenumber, .email {
+    color:inherit;
+    text-decoration:none;
+}
+
+a:hover > .fa-phone {
+    animation:ringing 1s infinite ease-out;
+}
+
+a:hover > .fa-at {
+    animation:rolling 0.7s infinite linear;
 }
 
 #video {
@@ -66,4 +128,147 @@ body::after {
 #contentcountdown {
     justify-content: center;
     height:100%;
+}
+
+#menu {
+    position: absolute;
+    top:2em;
+}
+#menu * {
+    transition:all 0.3s;
+}
+#menu > * {
+    min-height:130px;
+    min-width:260px;
+    cursor:pointer;
+    padding:0.3em;
+    /*border-width:1px;*/
+    /*border-style:solid;*/
+    /*border-color:transparent;*/
+    /*border-radius:0.3em;*/
+}
+#menu > .selected > .text {
+    opacity: 0.6;
+    font-size:1.2em;
+}
+#menu > .selected > .icon {
+    opacity: 0.6;
+    font-size:1.2em;
+}
+#menu > *:hover > .icon {
+    opacity: 0.6;
+    font-size:1.2em;
+}
+#menu > *:not([class^="selected"]) > .text {
+    opacity: 0.3;
+    font-size:0.8em;
+}
+
+#menu > *:not([class^="selected"]) > .icon {
+    opacity: 0.3;
+    font-size:0.8em;
+}
+
+#menu > *:hover:not([class^="selected"]) > .text, #menu > *:hover:not([class^="selected"]) > .icon {
+    opacity: 0.5;
+    font-size:0.85em;
+}
+
+body:not([class^="page0"]) #page0 {
+    display:none;
+}
+body:not([class^="page1"]) #page1 {
+    display:none;
+}
+body:not([class^="page2"]) #page2 {
+    display:none;
+}
+body:not([class^="page3"]) #page3 {
+    display:none;
+}
+body:not([class^="page4"]) #page4 {
+    display:none;
+}
+
+@keyframes jiggle {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+@-webkit-keyframes jiggle {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+
+@keyframes ringing {
+    0%, 50%, 100% {
+        transform: rotate(0) scale(1) skew(1deg);
+    }
+    25% {
+        transform: rotate(25deg) scale(1.2) skew(1deg);
+    }
+    75% {
+        transform: rotate(-25deg) scale(1.2) skew(1deg);
+    }
+}
+@-webkit-keyframes ringing {
+    0%, 50%, 100% {
+        transform: rotate(0) scale(1) skew(1deg);
+    }
+    25% {
+        transform: rotate(25deg) scale(1.2) skew(1deg);
+    }
+    75% {
+        transform: rotate(-25deg) scale(1.2) skew(1deg);
+    }
+}
+
+@keyframes rolling {
+    0% {
+        transform: rotate(0) scale(1);
+    }
+    50% {
+        transform: rotate(180deg) scale(1.4);
+    }
+    100% {
+        transform: rotate(360deg) scale(1);
+    }
+}
+
+@-webkit-keyframes rolling {
+    0% {
+        transform: rotate(0) scale(1);
+    }
+    50% {
+        transform: rotate(180deg) scale(1.4);
+    }
+    100% {
+        transform: rotate(360deg) scale(1);
+    }
 }
