--- a/style.css
+++ b/style.css
@@ -124,6 +124,10 @@ a:hover > .fa-at {
 #video {
     align-self:center;
     justify-content:center;
+    max-width:80%;
+}
+#video video {
+    width:100%;
 }
 #contentcountdown {
     justify-content: center;
@@ -270,5 +274,52 @@ body:not([class^="page4"]) #page4 {
     }
     100% {
         transform: rotate(360deg) scale(1);
+    }
+}
+
+
+@media screen and (max-width: 800px) {
+    #menu {
+        font-size:0.8em;
+    }
+    #menu > * {
+        min-height:60px;
+        min-width:130px;
+    }
+    .halfscreen {
+        max-width: 66%;
+        margin: auto auto auto 30%;
+    }
+}
+
+
+@media screen and (max-width: 550px) {
+    #menu {
+        top:0;
+        right:0;
+        left:0;
+        display:flex;
+        font-size:0.8em;
+    }
+    #menu > * {
+        flex:1;
+        min-width:unset;
+        min-height:unset;
+    }
+    #page {
+        padding-top:4em;
+    }
+    .fullscreen {
+        height:calc(100vh - 4em);
+    }
+    .halfscreen {
+        max-width:100%;
+        margin:0;
+    }
+    #page4 img {
+        width:180px;
+    }
+    #page4 {
+        font-size:0.7em;
     }
 }
