--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
 :root {
     --mblue:#5e8be2;
 }
+
+@font-face {
+  font-family: "BigDey";
+  src: 
+    url("./font/Bigdey_Demo.woff") format('woff'),
+    url("./font/Bigdey_Demo.ttf") format('truetype');
+}
+
 body {
+    font-family: "Futura";
     text-align:center;
     background-color:#001a7c;
     position: relative;
     color:#FFF;
-    font-family: cursive;
-    font-size:30px;
+    font-size: 24px;
     overflow-x:hidden;
     scroll-behavior: smooth;
     margin: 0;
@@ -25,20 +33,47 @@ body::after {
     position: absolute;
     z-index: -1;
 }
+#countdown > span {
+    font-size:2em;
+}
+#rsvp {
+    font-size: 27px;
+    flex: 1;
+}
 
 #logo {
-    margin: 2em 0;
+    margin: 1em 0;
+}
+
+#cloudword {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 100px 10px;
+    margin-top: 2em;
+    font-size: 0.8em;
+}
+
+#cloudword > * {
+    display:flex;
+    justify-self: center;
+    align-self: center;
+}
+
+#cloudword > img {
+  object-fit:cover;
+  height:300px;
 }
 
 #countdown, #countdownmore {
     color:var(--mblue);
     font-size:2em;
     flex: 2;
+    margin-bottom:0.5em;
 }
 
 
 #content {
-    flex: 4;
+    flex: 1;
 }
 #scrolldown {
     flex: 1;
@@ -58,6 +93,7 @@ body::after {
 .halfscreen {
     max-width:50%;
     margin:auto;
+    height: 100%;
 }
 .flex {
     display:flex;
@@ -142,6 +178,7 @@ a:hover > .fa-at {
     transition:all 0.3s;
 }
 #menu > * {
+    font-family: "BigDey", cursive;
     min-height:130px;
     min-width:260px;
     cursor:pointer;
@@ -193,7 +230,6 @@ body:not([class^="page3"]) #page3 {
 body:not([class^="page4"]) #page4 {
     display:none;
 }
-
 @keyframes jiggle {
   10%, 90% {
     transform: translate3d(-1px, 0, 0);
@@ -322,4 +358,191 @@ body:not([class^="page4"]) #page4 {
     #page4 {
         font-size:0.7em;
     }
+}
+.displayed .paper {
+    transform: skew(1deg, 4deg);
+}
+.paper {
+  height: 80vh;
+  width: 456px;
+  transform:skew(1deg, 4deg) scale(0.01) rotate(360deg);
+  margin: calc(9vh - 3px) auto;
+  -webkit-perspective: 800px;
+  -webkit-backface-visibility: hidden;
+  -moz-perspective: 800px;
+  -moz-backface-visibility: hidden;
+  -ms-perspective: 800px;
+  -ms-backface-visibility: hidden;
+  -o-perspective: 800px;
+  -o-backface-visibility: hidden;
+  perspective: 800px;
+  backface-visibility: hidden;
+  transition: all 1.6s;
+}
+.paper .part1 {
+  border: 3px solid #f9c561;
+  border-bottom-width: 0;
+  width: 450px;
+  height: 35%;
+  -moz-transition: all 0.6s linear;
+  -o-transition: all 0.6s linear;
+  -webkit-transition: all 0.6s linear;
+  transition: all 0.6s cubic-bezier(0, 0, 0.04, 0.99);
+  -moz-box-shadow: #151b45 55px 100px 100px 0px;
+  -webkit-box-shadow: #151b45 55px 100px 100px 0px;
+  box-shadow: #151b45 55px 100px 100px 0px;
+}
+.paper .part2 {
+  height: 35%;
+  border: 3px solid #f9c561;
+  border-top-width: 0;
+  width: 450px;
+  transform: translateY(-8px);
+  border-bottom-width: 0;
+  -o-transition: all 0.6s linear;
+  -webkit-transition: all 0.6s linear;
+  transition: all 0.6s cubic-bezier(0, 0, 0.04, 0.99);
+  -moz-box-shadow: #151b45 55px 90px 100px -30px;
+  -webkit-box-shadow: #151b45 55px 90px 100px -30px;
+  box-shadow: #151b45 55px 90px 100px -30px;
+}
+.paper .part3 {
+  height: 30%;
+  border: 3px solid #f9c561;
+  width: 450px;
+  transform: translateY(-15px);
+  border-top-width: 0;
+  -moz-transition: all 0.6s linear;
+  -o-transition: all 0.6s linear;
+  -webkit-transition: all 0.6s linear;
+  transition: all 0.6s cubic-bezier(0, 0, 0.04, 0.99);
+  -moz-box-shadow: #151b45 55px 90px 100px -30px;
+  -webkit-box-shadow: #151b45 55px 90px 100px -30px;
+  box-shadow: #151b45 55px 90px 100px -30px;
+}
+.paper:hover .part1 {
+  -moz-transform: rotateX(-30deg) translateY(0.65em) scale(0.98);
+  -ms-transform: rotateX(-30deg) translateY(0.65em) scale(0.98);
+  -webkit-transform: rotateX(-30deg) translateY(0.65em) scale(0.98);
+  transform: rotateX(-30deg) translateY(1.3em) scale(0.95);
+  -moz-transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -moz-box-shadow: #151b45 55px 90px 100px -30px;
+  -webkit-box-shadow: #151b45 55px 90px 100px -30px;
+  box-shadow: #151b45 55px 90px 100px -30px;
+}
+.paper:hover .part2 {
+  -moz-transform: rotateX(30deg) scale(1);
+  -ms-transform: rotateX(30deg) scale(1);
+  -webkit-transform: rotateX(30deg) scale(1);
+  transform: rotateX(30deg) scale(1);
+  -moz-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+  -moz-box-shadow: #151b45 55px 90px 100px -30px;
+  -webkit-box-shadow: #151b45 55px 90px 100px -30px;
+  box-shadow: #151b45 55px 90px 100px -30px;
+}
+.paper:hover .part3 {
+  -moz-transform: rotateX(-30deg) translateY(-0.72em) scale(1.06);
+  -ms-transform: rotateX(-30deg) translateY(-0.72em) scale(1.06);
+  -webkit-transform: rotateX(-30deg) translateY(-0.72em) scale(1.06);
+  transform: rotateX(-30deg) translateY(-0.72em) scale(1.06);
+  -moz-transform-origin: 50% 0%;
+  -ms-transform-origin: 50% 0%;
+  -webkit-transform-origin: 50% 0%;
+  transform-origin: 50% 0%;
+  -moz-box-shadow: #151b45 55px 90px 100px -30px;
+  -webkit-box-shadow: #151b45 55px 90px 100px -30px;
+  box-shadow: #151b45 55px 90px 100px -30px;
+}
+
+#page:not([class^="fr"]) .fr {
+    display:none; 
+}
+
+#page:not([class^="en"]) .en {
+    display:none;
+}
+
+.flag:hover {
+    transform:skew(2deg, 1deg);
+    text-shadow:1px 0px red;
+    box-shadow:red 0 0 100px 10px;
+    opacity:0.8 !important;
+}
+.flag {
+    float: right;
+    cursor:pointer;
+    width:1.5em;
+    height:1.5em;
+    line-height: 1.5em !important;
+    transition:all 0.3s;
+    border-radius:999px;
+    border:1px solid transparent;
+}
+.flag.fr {
+    opacity:0.4;
+}
+.infosquestion {
+  font-size: 0.8em;
+}
+.infosquestion > div {
+  margin: 70px 0;
+}
+
+.infosquestion li {
+  list-style: none;
+}
+.infosquestion li:nth-child(1) {
+  color: yellow;
+}
+
+.hovervisible, .hoverhidden {
+    transition:opacity 0.6s;
+}
+
+*:hover > .hoverhidden {
+    opacity:0;
+}
+.hoverhidden {
+    opacity:1;
+}
+
+*:hover > .hovervisible {
+    opacity:1;
+}
+.hovervisible {
+    opacity:0;
+}
+
+#cloudword .imgcontainer {
+     position:relative;
+     width: 300px;
+     height: 400px;
+}
+
+#cloudword .imgcontainer img {
+     position:absolute;
+     top: 0;
+     left: 0;
+     bottom: 0;
+     right: 0;
+}
+.universe {
+    position:absolute;
+    bottom:0;
+    left:50%;
+    transform:translateX(-50%);
+}
+.smallface {
+    object-fit: cover;
+    height:160px;
+}
+.bigface {
+    object-fit: cover;
+    height: 430px;
 }
